test/valid/56311_high_order_function_type/high_order_func_type.agu
-- Author: tcomp56311, João Vedor

let apply(f, x) : (Int -> Int, Int) -> Int = 
    f(x)

let double(x) : Int -> Int = 
    x * 2

let main(_) : Unit -> Unit =
    print(apply(double, 21))