test/invalid-semantic/56311_variable_not_declared.agu/variable_not_declared.agu
-- Author: tcomp56311, João Vedor

-- Semantic Problem

let x : Int = y + 1

-- Error: Variable 'y' not declared